:arrow_heading_up: Add module for core maven module

--- a/dynamicreports-core/pom.xml
+++ b/dynamicreports-core/pom.xml
@@ -142,6 +142,14 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -349,30 +357,30 @@
                 </plugins>
             </build>
             <dependencies>
-                <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+                <!--&lt;!&ndash; https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api &ndash;&gt;
                 <dependency>
                     <groupId>javax.xml.bind</groupId>
                     <artifactId>jaxb-api</artifactId>
                     <version>${jaxb-apiVersion}</version>
                 </dependency>
-                <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core -->
+                &lt;!&ndash; https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core &ndash;&gt;
                 <dependency>
                     <groupId>com.sun.xml.bind</groupId>
                     <artifactId>jaxb-core</artifactId>
                     <version>${jaxb-coreVersion}</version>
                 </dependency>
-                <!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-core -->
+                &lt;!&ndash; https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-core &ndash;&gt;
                 <dependency>
                     <groupId>org.glassfish.jaxb</groupId>
                     <artifactId>jaxb-core</artifactId>
                     <version>${jaxb-coreVersion}</version>
                 </dependency>
-                <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
+                &lt;!&ndash; https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl &ndash;&gt;
                 <dependency>
                     <groupId>com.sun.xml.bind</groupId>
                     <artifactId>jaxb-impl</artifactId>
                     <version>${jaxb-implVersion}</version>
-                </dependency>
+                </dependency>-->
             </dependencies>
         </profile>
     </profiles>
