--- a/pom.xml
+++ b/pom.xml
@@ -452,29 +452,29 @@
                     <scope>provided</scope>
                 </dependency>
                 <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
-                <dependency>
+                <!--<dependency>
                     <groupId>javax.xml.bind</groupId>
                     <artifactId>jaxb-api</artifactId>
                     <version>${jaxb-apiVersion}</version>
                 </dependency>
-                <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core -->
+                &lt;!&ndash; https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core &ndash;&gt;
                 <dependency>
                     <groupId>com.sun.xml.bind</groupId>
                     <artifactId>jaxb-core</artifactId>
                     <version>${jaxb-coreVersion}</version>
                 </dependency>
-                <!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-core -->
+                &lt;!&ndash; https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-core &ndash;&gt;
                 <dependency>
                     <groupId>org.glassfish.jaxb</groupId>
                     <artifactId>jaxb-core</artifactId>
                     <version>${jaxb-coreVersion}</version>
                 </dependency>
-                <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
+                &lt;!&ndash; https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl &ndash;&gt;
                 <dependency>
                     <groupId>com.sun.xml.bind</groupId>
                     <artifactId>jaxb-impl</artifactId>
                     <version>${jaxb-implVersion}</version>
-                </dependency>
+                </dependency>-->
             </dependencies>
         </profile>
 
